Fixed button on mobile

--- a/style.css
+++ b/style.css
@@ -300,6 +300,10 @@ body{
   .button {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    width: auto;
   }
 }
 
